#21 update apache usage removing a bunch of odd / duplicate stuff. Replaced matchers but left some deprecated ones around for now